[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/angelica/DJ/DJmono.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/angelica/DJ/Beat.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0313726, 0.258824, 0.352941, 0.776471 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0, 0.0705882, 0.0980392, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFontData" id=2]
font_path = "res://addons/angelica/fonts/OpenSans-Light.ttf"

[sub_resource type="DynamicFont" id=3]
size = 17
outline_size = 1
outline_color = Color( 0, 0.458824, 0.733333, 1 )
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 6.0
content_margin_right = 6.0
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.529412, 1, 0.976471, 0.52549 )
border_blend = true

[sub_resource type="Theme" id=5]
SpinBox/icons/updown = null

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.980392, 0.980392, 0.980392, 0.643137 )
draw_center = false
border_width_left = 1
border_width_right = 1
border_color = Color( 0.494118, 0.941176, 1, 1 )

[node name="Recorder" type="Node2D"]
position = Vector2( -4, 2 )
script = ExtResource( 5 )

[node name="line" type="Panel" parent="."]
margin_left = 31.0607
margin_right = 536.061
margin_bottom = 33.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 393.574
margin_top = 7.11018
margin_right = 451.574
margin_bottom = 27.1102
focus_mode = 2
text = "Beats"
flat = false
clip_text = true
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton2" type="MenuButton" parent="."]
margin_left = 464.818
margin_top = 6.39283
margin_right = 522.818
margin_bottom = 26.3928
focus_mode = 2
text = "sounds"
flat = false
clip_text = true
expand_icon = true
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="RichTextLabel" parent="."]
visible = false
margin_left = 385.9
margin_top = 5.98042
margin_right = 552.9
margin_bottom = 32.9804
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[url=play beat]Play[/url] [url=add beat]Add [/url] [url=copy]Copy[/url] [url=paste]Paste[/url]"
text = "Play Add  Copy Paste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 155.0
margin_top = 4.0
margin_right = 322.0
margin_bottom = 28.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.431373, 1, 0.827451, 1 )
max_length = 16
clear_button_enabled = true
placeholder_text = "Type your 16 beats!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedTune" type="SpinBox" parent="."]
margin_left = 49.0
margin_top = 5.0
margin_right = 122.0
margin_bottom = 29.0
theme = SubResource( 5 )
max_value = 900.0
value = 130.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loop" type="CheckBox" parent="."]
margin_left = 337.826
margin_top = 4.65687
margin_right = 361.826
margin_bottom = 28.6569
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playing" type="CheckBox" parent="."]
margin_left = 360.454
margin_top = 4.65687
margin_right = 384.454
margin_bottom = 28.6569
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Agulha" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="Agulha"]
margin_left = 160.0
margin_top = 4.0
margin_right = 170.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuperButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 8, 0 )

[connection signal="tree_exiting" from="." to="." method="_on_Beat1_tree_exiting"]
[connection signal="meta_clicked" from="Menu" to="." method="_on_Menu_meta_clicked"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="value_changed" from="SpeedTune" to="." method="_on_SpeedTune_value_changed"]
[connection signal="pressed" from="Loop" to="." method="_on_Loop_pressed"]
[connection signal="pressed" from="Playing" to="." method="_on_Playing_pressed"]
